tests/NormalTests/paczka1/fuzzy1/24080738.err
Error in line 1: mscPvlQ3P7 S949 18,8
Error in line 12: mscPvlQ3P7 S968 88,6
Error in line 24: fPZW A190 76,4
Error in line 30: QW2Xzqmdbo S441 44,3
